--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Cool, the tchisla site is work. will be render readme.md to page soon.
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Tchisla 解题参考 by Math-Fans</title>
+    <link href="style.css" rel="stylesheet">
+    <link href="favicon.png" rel="shortcut icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+</head>
+<body>
+
+<table id="tchislaPad">
+    <thead id="baseNum"><tr><td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td></tr></thead>
+    <tbody id="solutions">
+    </tbody>
+</table>
+
+<script src="render.js"></script>
+</body>
+</html>
