--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tchisla 解题参考 by Math-Fans</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="favicon.png" rel="shortcut icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <title>Tchisla 解题参考 by Math-Fans</title>
+  <link href="style.css" rel="stylesheet">
+  <link href="favicon.png" rel="shortcut icon">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
 
-<table id="tchislaPad">
-    <thead id="baseNum"><tr><td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td></tr></thead>
-    <tbody id="solutions">
-    </tbody>
+<div id="tchislaPad">
+    <span class="first"></span>
+    <span>1</span>
+    <span>2</span>
+    <span>3</span>
+    <span>4</span>
+    <span>5</span>
+    <span>6</span>
+    <span>7</span>
+    <span>8</span>
+    <span>9</span>
+</div>
+<table id="solutions">
 </table>
 
 <script src="render.js"></script>
