--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
-
-<div id="tchislaPad">
-    <span class="first"></span>
+<div id="numTitle">
+    <span></span>
     <span>1</span>
     <span>2</span>
     <span>3</span>
@@ -24,7 +23,6 @@
 </div>
 <table id="solutions">
 </table>
-
 <script src="render.js"></script>
 </body>
 </html>
