update render code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="numTitle">
-    <span></span>
+    <span class="row"></span>
     <span>1</span>
     <span>2</span>
     <span>3</span>
