--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 </head>
 <body>
 <div id="numTitle">
-    <span class="row"></span>
-    <span>1</span>
-    <span>2</span>
-    <span>3</span>
-    <span>4</span>
-    <span>5</span>
-    <span>6</span>
-    <span>7</span>
-    <span>8</span>
-    <span>9</span>
+  <div id="answer"></div>
+  <span class="row"></span>
+  <span>1</span>
+  <span>2</span>
+  <span>3</span>
+  <span>4</span>
+  <span>5</span>
+  <span>6</span>
+  <span>7</span>
+  <span>8</span>
+  <span>9</span>
 </div>
 <table id="solutions">
 </table>
