--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
-<div id="numTitle"><div id="answer"></div><span class="row"></span><span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span></div>
-<table id="solutions">
-</table>
+<div id="function">
+  <div id="answer"></div>
+  <div id="numTitle"><span class="row"></span><span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span></div>
+</div>
+<table id="solutions"></table>
 <script src="render.js"></script>
 </body>
 </html>
