--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <title>Tchisla 解题参考 by Math-Fans</title>
-  <link href="style.css" rel="stylesheet">
-  <link href="favicon.png" rel="shortcut icon">
+  <link href="dist/style.css" rel="stylesheet">
+  <link href="dist/favicon.png" rel="shortcut icon">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
@@ -14,6 +14,6 @@
   <div id="numTitle"><span class="row"></span><span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span></div>
 </div>
 <table id="solutions"></table>
-<script src="render.js"></script>
+<script src="dist/render.js"></script>
 </body>
 </html>
