--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
-<div id="function">
-  <div id="answer"></div>
-  <div id="numTitle"><span class="row"></span><span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span></div>
+<div id="titleBack"></div>
+<div id="tchislaPad"><table id="solutions">
+  <tr id="numTitle"><td class="row"></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td><td>8</td><td>9</td></tr>
+</table></div>
+<div id="answer">
+  <div id="controller"><span id="last">&lt;</span><span id="next">&gt;</span></div>
+  <div id="quiz">10000#5</div><div id="formula">There should be beautiful formula.</div><div id="solution">1000=5+3+3241+123</div>
 </div>
-<table id="solutions"></table>
 <script src="dist/render.js"></script>
 </body>
 </html>
