update to add latex data

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </table></div>
 <div id="answer">
   <div id="controller"><span id="last">&lt;</span><span id="next">&gt;</span></div>
-  <div id="quiz">10000#5</div><div id="formula">There should be beautiful formula.</div><div id="solution">1000=5+3+3241+123</div>
+  <div id="quiz"></div><div id="formula">There should be beautiful formula.</div><div id="solution"></div>
 </div>
-<script src="dist/render.js"></script>
+<script src="src/render.js"></script>
 </body>
 </html>
