--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
   <div id="quiz"></div><div id="formula">There should be beautiful formula.</div><div id="solution"></div>
 </div>
 <script src="src/render.js"></script>
+<script type="text/javascript" async
+        src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML">
+</script>
 </body>
 </html>
