add mathjax config

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <div id="quiz"></div><div id="formula">There should be beautiful formula.</div><div id="solution"></div>
 </div>
 <script src="src/render.js"></script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});
+</script>
 <script type="text/javascript" async
         src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_CHTML">
 </script>
