update mathjax api

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="controller"><span id="last">&lt;</span><span id="next">&gt;</span></div>
   <div id="quiz"></div><div id="formula">There should be beautiful formula.</div><div id="solution"></div>
 </div>
-<script src="src/render.js"></script>
+<script src="dist/render.js"></script>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$']]}});
 </script>
